<resources>
    <string name="app_name">AplikasiFormatif2_Habibulilah</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="masuk_akun">Masuk Akun</string>
    <string name="daftar_akun_baru">Daftar Akun Baru</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="home">Home</string>
    <string name="aritmatika">Aritmatika</string>
    <string name="multimedia">Multimedia</string>
    <string name="bidang_datar">Bidang Datar</string>
    <string name="bangun_ruang">Bangun Ruang</string>
    <string name="audio_sederhana">Audio Sederhana</string>
    <string name="audio_streaming">Audio Streaming</string>
    <string name="video_sederhana">Video Sederhana</string>
    <string name="video_streaming">Video Streaming</string>
    <string name="trapesium">Trapesium</string>
    <string name="segitiga">Segitiga</string>
    <string name="jajar_genjang">Jajar Genjang</string>
    <string name="lingkaran">Lingkaran</string>
    <string name="layang_layang">Layang Layang</string>
    <string name="balok">Balok</string>
    <string name="kubus">Kubus</string>
    <string name="kerucut">Kerucut</string>
    <string name="tabung">Tabung</string>
    <string name="bola">Bola</string>
    <string name="daftar_akun">Daftar Akun</string>
    <string name="alas">Alas</string>
    <string name="tinggi">Tinggi</string>
    <string name="hitung">Hitung</string>
    <string name="hasil">Hasil</string>
    <string name="keliling">Keliling</string>
    <string name="luas">Luas</string>
    <string name="d1">Diameter 1</string>
    <string name="d2">Diameter 2</string>
    <string name="jari_jari">Jari Jari</string>
    <string name="a">a</string>
    <string name="b">b</string>
    <string name="panjang">Panjang</string>
    <string name="lebar">Lebar</string>
    <string name="sisi">Sisi</string>
    <string name="volume">Volume</string>
    <string name="sisi_a">Sisi A</string>
    <string name="sisi_b">Sisi B</string>
    <string name="sisi_c">Sisi C</string>
    <string name="garis_pelukis">Garis Pelukis (s)</string>
</resources>